refactor: improve rider location update logging and simplify bounds clamping